<resources>
    <string name="app_name">Car Monitor</string>
    <string name="main_text_view">Please Load File From Toolbar</string>
    <string name="main_activity_menuSettings">Settings</string>
    <string name="main_activity_loadFile">Load File</string>
    <string name="main_activity_menuAbout">About</string>
    <string name="map_api">MAP - API</string>
    <string name="rpm_text">RPM </string>
    <string name="speed_text">Speed </string>
    <string name="co2_text">CO2  </string>
    <string name="torque_text">Torque  </string>
    <string name="coolant_text">Coolant Temperature  </string>
    <string name="engine_temperature_text">Engine Temperature </string>
    <string name="fuel_amount_text">Fuel Amount </string>
    <string name="exit">EXIT</string>
    <string name="title_activity_maps">Map</string>
    <string name="settings_main_label_text">TIMER</string>
    <string name="seekbar_position">0.50 SEC</string>
    <string name="estimated_road">Estimated Road  </string>
    <string name="second">Second</string>
    <string name="kilometer_per_liter">KM / Liter  </string>
</resources>
