<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="1"
            android:title="@string/main_activity_menuSettings"
            />

        <item
            android:id="@+id/action_about"
            android:orderInCategory="2"
            android:title="@string/main_activity_menuAbout"
        />

        <item
            android:id="@+id/load_button"
            android:orderInCategory="3"
            android:title="@string/main_activity_loadFile"
            />

        <item
            android:id="@+id/map_api"
            android:orderInCategory="4"
            android:title="@string/map_api"
            />

        <item
            android:id="@+id/exit"
            android:orderInCategory="5"
            android:title="@string/exit"

            />

</menu>