<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:stackFromBottom="true"
    android:transcriptMode="alwaysScroll" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/rpm_text"
                            android:id="@+id/rpm"
                            android:textAlignment="center"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text=""
                            android:id="@+id/rpm_value"
                            android:layout_weight="1"
                            android:textAlignment="center"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/speed_text"
                            android:textAlignment="center"
                            android:id="@+id/speed"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text=""
                            android:id="@+id/speed_value"
                            android:layout_weight="1"
                            android:textAlignment="center"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/engine_temperature_text"
                            android:textAlignment="center"
                            android:id="@+id/engine_temperature"
                            android:layout_weight="0.1"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:id="@+id/engine_temperature_value"
                            android:layout_weight="2"
                            android:textAlignment="center"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/fuel_amount_text"
                            android:id="@+id/fuel_amount"
                            android:layout_weight=".2"
                            android:textAlignment="center"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:layout_weight="1"
                            android:id="@+id/fuel_amount_value"
                            android:textAlignment="center"
                            />
                </TableRow>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/second_label"
                            android:text=""
                            android:layout_above="@+id/second_button"
                            android:layout_centerHorizontal="true"
                           />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Next Second"
                            android:id="@+id/second_button"
                            android:onClick="onClick"
                            android:nestedScrollingEnabled="false"
                            android:layout_alignWithParentIfMissing="false"
                            android:layout_marginBottom="187dp"
                            android:layout_alignParentBottom="true"
                            android:layout_centerHorizontal="true"/>


                </RelativeLayout>

        </LinearLayout>
</ScrollView>